Optimización de SEO 2

--- a/index.html
+++ b/index.html
@@ -107,39 +107,51 @@
 
 <body>
     <header class="dg gtc-min-a pad-1-2">
-        <a href="#" class="dg gtc-min-a fz-2 ac-center ai-center">
+        <a href="https://martinezK97.github.io/cemax/" class="dg gtc-min-a fz-2 ac-center ai-center"
+            title="Ir al inicio">
             <i class="fa fa-cubes as-center"></i>
             <span class="fw-8">Cemax</span>
         </a>
         <!-- Menú de cabecera -->
         <nav class="dg gtc-6 gg-1-5 maxw-min mar-a-0-a-a ac-center ai-center">
-            <a href="#portada" class="dg gtc-min-a gg-5"><i class="fa fa-home as-center"></i><span> Inicio</span></a>
-            <a href="#servicios" class="dg gtc-min-a gg-5"><i class="fa fa-trowel as-center"></i><span>
+            <a href="#portada" title="Deslizar al inicio" class="dg gtc-min-a gg-5"><i
+                    class="fa fa-home as-center"></i><span> Inicio</span></a>
+            <a href="#servicios" title="Ir a servicios" class="dg gtc-min-a gg-5"><i
+                    class="fa fa-trowel as-center"></i><span>
                     Servicios</span></a>
-            <a href="#project_referer" class="dg gtc-min-a gg-5"><i class="fa fa-trowel-bricks as-center"></i><span>
+            <a href="#project_referer" title="Ir a proyectos" class="dg gtc-min-a gg-5"><i
+                    class="fa fa-trowel-bricks as-center"></i><span>
                     Proyectos</span></a>
-            <a href="#sobremi" class="dg gtc-min-a gg-5 minw-max"><i class="fa fa-user as-center"></i><span> Sobre
+            <a href="#sobremi" title="Ir a sobre mi" class="dg gtc-min-a gg-5 minw-max"><i
+                    class="fa fa-user as-center"></i><span> Sobre
                     mi</span></a>
-            <a href="#testimonios" class="dg gtc-min-a gg-5"><i class="fa fa-comments as-center"></i><span>
+            <a href="#testimonios" title="Ir a testimonios" class="dg gtc-min-a gg-5"><i
+                    class="fa fa-comments as-center"></i><span>
                     Testimonios</span></a>
-            <a href="#contacto" class="dg gtc-min-a gg-5 bg-button color-btn pad-05-2 br-100" id="contact_header_btn"><i
-                    class="fa fa-envelope as-center"></i><span>Contacto</span></a>
+            <a href="#contacto" title="Ir a contactos" class="dg gtc-min-a gg-5 bg-button color-btn pad-05-2 br-100"
+                id="contact_header_btn"><i class="fa fa-envelope as-center"></i><span>Contacto</span></a>
         </nav>
     </header>
     <div id="menu" class="hide">
         <button class="btn-menu fz-2 maxw-max"><i class="fa fa-bars"></i></button>
-        <a href="#portada" aria-label="Sección principal"><i class="fa fa-home"></i> Inicio</a>
-        <a href="#servicios" aria-label="Sección de servicios"><i class="fa fa-trowel"></i> Servicios</a>
-        <a href="#project_referer" aria-label="Sección de proyectos"><i class="fa fa-trowel"></i> Proyectos</a>
-        <a href="#sobremi" aria-label="Descipción de mi"><i class="fa fa-user"></i> Sobre mi</a>
-        <a href="#testimonios" aria-label="Testimonios de clientes"><i class="fa fa-comments"></i> Testimonios</a>
-        <a href="#contacto" aria-label="Información de contacto"><i class="fa fa-envelope"></i> Contacto </a>
+        <a href="#portada" aria-label="Sección principal" title="Ir al Inicio"><i class="fa fa-home"></i>
+            Inicio</a>
+        <a href="#servicios" aria-label="Sección de servicios" title="Ir a Servicios"><i class="fa fa-trowel"></i>
+            Servicios</a>
+        <a href="#project_referer" aria-label="Sección de proyectos" title="Ir a Proyectos"><i class="fa fa-trowel"></i>
+            Proyectos</a>
+        <a href="#sobremi" aria-label="Descipción de mi" title="Ir a Sobre Mi"><i class="fa fa-user"></i> Sobre mi</a>
+        <a href="#testimonios" aria-label="Testimonios de clientes" title="Ir a Testimonios"><i
+                class="fa fa-comments"></i> Testimonios</a>
+        <a href="#contacto" aria-label="Información de contacto" title="Ir a Contactos"><i class="fa fa-envelope"></i>
+            Contacto </a>
     </div>
     <section id="portada" class="dg ac-center ai-center">
         <div id="background3d"></div>
         <h1 class="fz-5 ta-center maxw-max mar-0-a">Transformamos<br />tus espacios</h1>
         <h2 class="fz-3 ta-center maxw-max mar-0-a">Hace más de 10 años</h2>
-        <a href="http://wa.me/+59898760446" target="_blank" href="https://wa.me/+59898760446" rel="noopener noreferrer"
+        <a href="http://wa.me/+59898760446" title="Contáctame via WhatsApp" target="_blank"
+            href="https://wa.me/+59898760446" rel="noopener noreferrer"
             class="border-light ta-center br-100 db maxw-max mar-2-a-0 pad-1 blur-15 fz-1-25">
             <i class="fab fa-whatsapp"></i> Solicitar presupuesto</a>
     </section>
@@ -161,6 +173,7 @@
                         necesidades para lograr resultados
                         funcionales y estéticos.</p>
                     <a class="btn-primary border-light maxw-max mar-a-0-a-a fz-1 pad-05-1 db br-100"
+                        title="Contáctame via WhatsApp"
                         href="https://wa.me/+59894746115?text=Hola,%20me%20gustar%C3%ADa%20solicitar%20presupuesto%20de%20construcci%C3%B3n%20y%remodelaciones%20que%20vi%20en%20tu%20web">
                         <i class="fab fa-whatsapp"></i>
                         Solicitar presupuesto</a>
@@ -174,7 +187,7 @@
                         Realzamos cada espacio con acabados y terminaciones de alta calidad, cuidando cada detalle para
                         un resultado impecable y duradero
                     </p>
-                    <a target="_blank" rel="noopener noreferrer"
+                    <a target="_blank" rel="noopener noreferrer" title="Contáctame via WhatsApp"
                         class="btn-primary border-light maxw-max mar-a-0-a-a fz-1 pad-05-1 db br-100"
                         href="https://wa.me/+59894746115?text=Hola,%20me%20gustar%C3%ADa%20solicitar%20presupuesto%20de%20acabados%20y%20terminaciones%20que%20vi%20en%20tu%20web"><i
                             class="fab fa-whatsapp"></i> Solicitar presupuesto</a>
@@ -190,7 +203,7 @@
                         Brindamos soluciones duraderas en sanitaria y fontanería, con instalaciones y materiales de
                         alta calidad para evitar futuras pérdidas.
                     </p>
-                    <a target="_blank" rel="noopener noreferrer"
+                    <a target="_blank" rel="noopener noreferrer" title="Contáctame via WhatsApp"
                         class="btn-primary border-light maxw-max mar-a-0-a-a fz-1 pad-05-1 db br-100"
                         href="https://wa.me/+59894746115?text=Hola,%20me%20gustar%C3%ADa%20solicitar%20presupuesto%20para%20sanitaria%20y%20fontaner%C3%ADa%20que%20vi%20en%20tu%20web"><i
                             class="fab fa-whatsapp"></i> Solicitar presupuesto</a>
@@ -204,7 +217,7 @@
                         Instalamos y reparamos sistemas eléctricos de forma segura, y con garantia
                         de durabilidad, evitando futuras fallas, y siguiendo las normas de seguridad vigentes.
                     </p>
-                    <a target="_blank" rel="noopener noreferrer"
+                    <a target="_blank" rel="noopener noreferrer" title="Contáctame via WhatsApp"
                         class="btn-primary border-light maxw-max mar-a-0-a-a fz-1 pad-05-1 db br-100"
                         href="https://wa.me/+59894746115?text=Hola,%20me%20gustar%C3%ADa%20solicitar%20el%20servicio%20para%20recarga%20de%20l%C3%ADquido%20refrigerante">
                         <i class="fab fa-whatsapp"></i> Solicitar presupuesto</a>
@@ -256,8 +269,10 @@
                     <span>Electricista</span>
                 </p>
                 <div class="contactos dg gar-min gc-1-3 gg-10 mar-0">
-                    <a href="tel:+59898760446" class="db mar-0"><i class="fa fa-phone"></i> 098 760 446</a>
-                    <a href="mailto:kevinmartinez08.97@hotmail.com" class="db mar.0"><i class="fa fa-envelope"></i>
+                    <a href="tel:+59898760446" class="db mar-0" title="Contáctame telefónicamente"><i
+                            class="fa fa-phone"></i> 098 760 446</a>
+                    <a href="mailto:kevinmartinez08.97@hotmail.com" title="Contáctame via email" class="db mar.0"><i
+                            class="fa fa-envelope"></i>
                         kevinmartinez@hotmail.com</a>
                 </div>
             </div>
@@ -354,10 +369,12 @@
             <div class="rrss gar-min maxw-max maxh-min">
                 <h3 class="pad-1">Seguinos en nuestras redes</h3>
                 <div class="dg gtc-4 gg-1">
-                    <a href="https://facebook.com"><i class="fab fa-facebook fz-2"></i></a>
-                    <a href="https://instagram.com"><i class="fab fa-instagram fz-2"></i></a>
-                    <a href="https://tiktok.com"><i class="fab fa-tiktok fz-2"></i></a>
-                    <a href="https://twitter.com"><i class="fab fa-x-twitter fz-2"></i></a>
+                    <a href="https://facebook.com/" title="Visitanos en Facebook"><i
+                            class="fab fa-facebook fz-2"></i></a>
+                    <a href="https://instagram.com/" title="Visitanos en Instagram"><i
+                            class="fab fa-instagram fz-2"></i></a>
+                    <a href="https://tiktok.com/" title="Visitanos en TikTok"><i class="fab fa-tiktok fz-2"></i></a>
+                    <a href="https://x.com/" title="Visitanos en Twitter"><i class="fab fa-x-twitter fz-2"></i></a>
                 </div>
             </div>
             <div class="horarios maxw-max">
@@ -366,8 +383,9 @@
                 <p>Sábados de 09:00 a 15:00hs</p>
             </div>
         </div>
-        <div class="footer">Copyright 2025. All right reserved. Created by: <a
-                type="mailto:kevinmartinez08.97@hotmail.com">Kevin Martínez</a></div>
+        <div class="footer" title="Contacta al desarrollador de este sitio">Copyright 2025. All right reserved. Created
+            by: <a href="mailto:kevinmartinez08.97@hotmail.com" target="_blank" rel="noopener noreferrer">Kevin
+                Martínez</a></div>
     </footer>
 
 
