--- a/index.html
+++ b/index.html
@@ -5,18 +5,14 @@
     <!-- Configuración básica -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <!-- Título de la página -->
     <title>Servicios de Construcción y Remodelación Integral | Cemax</title>
-
     <!-- Meta Description -->
     <meta name="description"
         content="Empresa especializada en construcción, remodelación, fontanería, electricidad y pintura para hogares y negocios. Trabajos garantizados, presupuesto gratis y atención inmediata.">
-
     <!-- Meta Keywords -->
     <meta name="keywords"
         content="albañilería, construcción de casas, remodelación de baños, fontanería profesional, electricista certificado, pintura de interiores, ampliación de viviendas, acabados de lujo, servicios sanitarios, reformas para negocios">
-
     <!-- Canonical URL -->
     <link rel="canonical" href="http://www.localhost/cemax">
 
@@ -88,17 +84,11 @@
     <script src="https://code.jquery.com/ui/1.14.1/jquery-ui.min.js"
         integrity="sha256-AlTido85uXPlSyyaZNsjJXeCs07eSv3r43kyCVc8ChI=" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="./assets/img/brand/isotype_black.png" type="image/x-icon">
+    <!-- CSS -->
     <link rel="stylesheet" href="./assets/css/default.css">
     <link rel="stylesheet" href="./assets/css/grid.css">
-    <link rel="stylesheet" href="./assets/css/header.css">
-    <link rel="stylesheet" href="./assets/css/portada.css">
-    <link rel="stylesheet" href="./assets/css/menu.css">
-    <link rel="stylesheet" href="./assets/css/servicios.css">
-    <link rel="stylesheet" href="./assets/css/sobremi.css">
-    <link rel="stylesheet" href="./assets/css/gallery.css">
-    <link rel="stylesheet" href="./assets/css/testimonios.css">
-    <link rel="stylesheet" href="./assets/css/footer.css">
-    <!-- Js -->
+    <link rel="stylesheet" href="./assets/css/main.css">
+    <!-- JS -->
     <script src="./assets/js/menu.js"></script>
     <script src="./assets/js/header.js"></script>
     <script src="./assets/js/gallery.js"></script>
@@ -356,19 +346,20 @@
         </section>
     </section>
     <footer class="pad-1">
-        <div class="wave"></div>
+        <h1 class="fz-2 pad-2">Contactate con nosotros</h1>
         <div class="container dg gtc-2 gar-min gg-1 mar-tp-1">
-            <article class="locacion maxw-max br-10 mar-a-0-a-a gr-1-3">
-                <h3 class="pad-0-1 ta-center">¿Donde estamos?</h3>
-                <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d9255.379772065602!2d-56.170827541851075!3d-34.89965061989336!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2suy!4v1743511970993!5m2!1ses-419!2suy"
-                    width="300" height="300" style="border:0;" allowfullscreen="" loading="lazy"
-                    referrerpolicy="no-referrer-when-downgrade"></iframe>
-                <p class="mar-0 ta-center">Colonia 3814, Montevideo.</p>
-            </article>
-            <div class="rrss gar-min maxw-max maxh-min">
+            <div class="phone mar-a-0-a-a">
+                <h3>Llamanos al:</h3>
+                <a href="tel:+59898760446" title="Llamanos"><i class="fa fa-phone"></i> 098 760 446</a>
+            </div>
+            <div class="horarios mar-a-0-a-a">
+                <h3 class="pad-1">Horarios de atención</h3>
+                <p>De lunes a viernes de 07:00 a 17:00hs</p>
+                <p>Sábados de 09:00 a 15:00hs</p>
+            </div>
+            <div class="rrss gar-min maxh-min mar-a-0-a-a">
                 <h3 class="pad-1">Seguinos en nuestras redes</h3>
-                <div class="dg gtc-4 gg-1">
+                <div class="dg gtc-4 gg-1 mar-a-0-a-a">
                     <a href="https://facebook.com/" title="Visitanos en Facebook"><i
                             class="fab fa-facebook fz-2"></i></a>
                     <a href="https://instagram.com/" title="Visitanos en Instagram"><i
@@ -377,11 +368,14 @@
                     <a href="https://x.com/" title="Visitanos en Twitter"><i class="fab fa-x-twitter fz-2"></i></a>
                 </div>
             </div>
-            <div class="horarios maxw-max">
-                <h3 class="pad-1">Horarioas de atención</h3>
-                <p>De lunes a viernes de 07:00 a 17:00hs</p>
-                <p>Sábados de 09:00 a 15:00hs</p>
-            </div>
+            <article class="locacion br-10 gr-1-4 gc-2-3">
+                <h3 class="pad-0-1 ta-center mar-0">¿Donde estamos?</h3>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d9255.379772065602!2d-56.170827541851075!3d-34.89965061989336!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2suy!4v1743511970993!5m2!1ses-419!2suy"
+                    width="300" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <p class="mar-0 ta-center pad-tp-05">Colonia 3814, Montevideo.</p>
+            </article>
         </div>
         <div class="footer" title="Contacta al desarrollador de este sitio">Copyright 2025. All right reserved. Created
             by: <a href="mailto:kevinmartinez08.97@hotmail.com" target="_blank" rel="noopener noreferrer">Kevin
@@ -391,7 +385,7 @@
 
     <div class="modal-backdrop"></div>
     <div class="permission-modal">
-        <h2 class="pad-1">¿Permitir acceso al giroscopio?</h2>
+        <p class="pad-1 fz-1-25">¿Permitir acceso al giroscopio?</p>
         <p>Para disfrutar de la experiencia interactiva, necesitamos acceso al sensor de movimiento de tu dispositivo.
         </p>
         <button id="grant-permission">Permitir acceso</button>
