Optimizacion de performance

--- a/index.html
+++ b/index.html
@@ -229,11 +229,11 @@
         <section id="gallery_content" class="fa">
             <button class="prev"><i class="fa fa-angle-left"></i></button>
             <div id="gallery">
-                <img src="./assets/img/proyectos/one.jpg" alt="Foto de living terminado" loading="lizy">
-                <img src="./assets/img/proyectos/two.jpg" alt="Foto de baño remodelado" loading="lazy">
-                <img src="./assets/img/proyectos/three.jpg" alt="Foto de dormitorio moderno" loading="lazy">
-                <img src="./assets/img/proyectos/four.jpg" alt="Foto de ampliacion de cocina" loading="lazy">
-                <img src="./assets/img/proyectos/five.jpg" alt="Foto de escaleras rediseñadas" loading="lazy">
+                <img src="./assets/img/proyectos/one.webp" alt="Foto de living terminado" loading="lizy">
+                <img src="./assets/img/proyectos/two.webp" alt="Foto de baño remodelado" loading="lazy">
+                <img src="./assets/img/proyectos/three.webp" alt="Foto de dormitorio moderno" loading="lazy">
+                <img src="./assets/img/proyectos/four.webp" alt="Foto de ampliacion de cocina" loading="lazy">
+                <img src="./assets/img/proyectos/five.webp" alt="Foto de escaleras rediseñadas" loading="lazy">
 
             </div>
             <button class="next"><i class="fa fa-angle-right"></i></button>
@@ -251,7 +251,7 @@
                 medida, adaptándome a cada proyecto con profesionalismo y atención al detalle. Mi prioridad es ofrecer
                 un servicio confiable y eficiente, cumpliendo siempre con los más altos estándares del rubro.</p>
             <div class="persona gg-1 gtc-min-a gar-min maxh-min dg box maxw-max box-shadow border-light mar-1-a">
-                <img src="./assets/img/yo.png" alt="Mi foto de presentación" loading="lazy">
+                <img src="./assets/img/yo.webp" alt="Mi foto de presentación" loading="lazy">
                 <span class="name db as-center">Kevin Martínez</span>
                 <p class="oficios mar-0">
                     <span>Albañil</span>
@@ -321,15 +321,15 @@
         <section>
 
             <div class="box">
-                <img src="./assets/img/testimonios/user1.png" class="border-light" alt="Foto de perfil de un testimonio"
-                    loading="lazy">
+                <img src="./assets/img/testimonios/user1.webp" class="border-light"
+                    alt="Foto de perfil de un testimonio" loading="lazy">
                 <p class="name">Matías, 25 años</p>
                 <p class="comentario">Los llamé hoy y en menos de 2 horas ya estaba disfrutando mi nuevo aire
                     acondicionado. Super recomendables! </p>
             </div>
             <div class="box">
-                <img src="./assets/img/testimonios/user2.png" class="border-light" alt="Foto de perfil de un testimonio"
-                    loading="lazy">
+                <img src="./assets/img/testimonios/user2.webp" class="border-light"
+                    alt="Foto de perfil de un testimonio" loading="lazy">
                 <p class="name">Mariana, 34 años</p>
                 <p class="comentario">El servicio fue excelente. Me explicaron todo con claridad y dejaron el equipo
                     funcionando perfectamente. ¡Muy
@@ -337,8 +337,8 @@
                 </p>
             </div>
             <div class="box">
-                <img src="./assets/img/testimonios/user3.png" class="border-light" alt="Foto de perfil de un testimonio"
-                    loading="lazy">
+                <img src="./assets/img/testimonios/user3.webp" class="border-light"
+                    alt="Foto de perfil de un testimonio" loading="lazy">
                 <p class="name">Martín, 56 años</p>
                 <p class="comentario">Tuve un problema con mi aire acondicionado en pleno verano y lo solucionaron el
                     mismo día. Gran atención y muy buen trabajo.</p>
@@ -346,7 +346,7 @@
         </section>
     </section>
     <footer class="pad-1">
-        <h1 class="fz-2 pad-2">Contactate con nosotros</h1>
+        <h1 class="fz-2 pad-2" style="z-index: 2;">Contactate con nosotros</h1>
         <div class="container dg gtc-2 gar-min gg-1 mar-tp-1">
             <div class="phone mar-a-0-a-a">
                 <h3>Llamanos al:</h3>
