Cambio de reseñas en Testimonios

--- a/index.html
+++ b/index.html
@@ -324,24 +324,23 @@
                 <img src="./assets/img/testimonios/user1.webp" class="border-light"
                     alt="Foto de perfil de un testimonio" loading="lazy">
                 <p class="name">Matías, 25 años</p>
-                <p class="comentario">Los llamé hoy y en menos de 2 horas ya estaba disfrutando mi nuevo aire
-                    acondicionado. Super recomendables! </p>
+                <p class="comentario">Teníamos una grieta preocupante en una pared interior y resolvieron el problema en
+                    un día. Muy satisfecho con el trabajo. </p>
             </div>
             <div class="box">
                 <img src="./assets/img/testimonios/user2.webp" class="border-light"
                     alt="Foto de perfil de un testimonio" loading="lazy">
                 <p class="name">Mariana, 34 años</p>
-                <p class="comentario">El servicio fue excelente. Me explicaron todo con claridad y dejaron el equipo
-                    funcionando perfectamente. ¡Muy
-                    profesionales!
+                <p class="comentario">El servicio fue excelente. Me quitaron las filtraciones de agua en el techo, y a
+                    un precio accesible. Quedé muy contenta con ustedes!
                 </p>
             </div>
             <div class="box">
                 <img src="./assets/img/testimonios/user3.webp" class="border-light"
                     alt="Foto de perfil de un testimonio" loading="lazy">
                 <p class="name">Martín, 56 años</p>
-                <p class="comentario">Tuve un problema con mi aire acondicionado en pleno verano y lo solucionaron el
-                    mismo día. Gran atención y muy buen trabajo.</p>
+                <p class="comentario">Me remodelaron todo el baño en menos de 1 semana. Sigo sorpendido con los
+                    resultados. Muchas gracias!</p>
             </div>
         </section>
     </section>
