Ajustes responsivos del footer

--- a/index.html
+++ b/index.html
@@ -347,16 +347,16 @@
     <footer class="pad-1">
         <h1 class="fz-2 pad-2" style="z-index: 2;">Contactate con nosotros</h1>
         <div class="container dg gtc-2 gar-min gg-1 mar-tp-1">
-            <div class="phone mar-a-0-a-a">
+            <div class="phone mar-a-0-a-a ta-center">
                 <h3>Llamanos al:</h3>
                 <a href="tel:+59898760446" title="Llamanos"><i class="fa fa-phone"></i> 098 760 446</a>
             </div>
             <div class="horarios mar-a-0-a-a">
-                <h3 class="pad-1">Horarios de atención</h3>
+                <h3 class="pad-1 ta-center">Horarios de atención</h3>
                 <p>De lunes a viernes de 07:00 a 17:00hs</p>
                 <p>Sábados de 09:00 a 15:00hs</p>
             </div>
-            <div class="rrss gar-min maxh-min mar-a-0-a-a">
+            <div class="rrss gar-min maxh-min mar-a-0-a-a ta-center">
                 <h3 class="pad-1">Seguinos en nuestras redes</h3>
                 <div class="dg gtc-4 gg-1 mar-a-0-a-a">
                     <a href="https://facebook.com/" title="Visitanos en Facebook"><i
