Linkeo de contactos

--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
             <a href="#testimonios" title="Ir a testimonios" class="dg gtc-min-a gg-5"><i
                     class="fa fa-comments as-center"></i><span>
                     Testimonios</span></a>
-            <a href="#contacto" title="Ir a contactos" class="dg gtc-min-a gg-5 bg-button color-btn pad-05-2 br-100"
-                id="contact_header_btn"><i class="fa fa-envelope as-center"></i><span>Contacto</span></a>
+            <a href="#contactos" title="Ir a contactos" class="dg gtc-min-a gg-5 bg-button color-btn pad-05-2 br-100"
+                id="contact_header_btn"><i class="fa fa-envelope as-center"></i><span>Contactos</span></a>
         </nav>
     </header>
     <div id="menu" class="hide">
@@ -133,8 +133,8 @@
         <a href="#sobremi" aria-label="Descipción de mi" title="Ir a Sobre Mi"><i class="fa fa-user"></i> Sobre mi</a>
         <a href="#testimonios" aria-label="Testimonios de clientes" title="Ir a Testimonios"><i
                 class="fa fa-comments"></i> Testimonios</a>
-        <a href="#contacto" aria-label="Información de contacto" title="Ir a Contactos"><i class="fa fa-envelope"></i>
-            Contacto </a>
+        <a href="#contactos" aria-label="Información de contacto" title="Ir a Contactos"><i class="fa fa-envelope"></i>
+            Contactos </a>
     </div>
     <section id="portada" class="dg ac-center ai-center">
         <div id="background3d"></div>
@@ -344,7 +344,7 @@
             </div>
         </section>
     </section>
-    <footer class="pad-1">
+    <footer class="pad-1" id="contactos">
         <h1 class="fz-2 pad-2" style="z-index: 2;">Contactate con nosotros</h1>
         <div class="container dg gtc-2 gar-min gg-1 mar-tp-1">
             <div class="phone mar-a-0-a-a ta-center">
